feat(identity/auth; mail-service): implement verify-email, add mail-service, add RabbitMQ for send main verify
